--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,10 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+
+  ul
+    each val in posts.length ? posts : [{title: "No posts.", post: "Sorry, there are no active posts :("}]
+      li= val.title
+      li= val.post
+
+  a(href="new") Make a post
