--- a/views/index.jade
+++ b/views/index.jade
@@ -1,12 +1,26 @@
 extends layout
 
 block content
+
+
   h1= title
   p Welcome to #{title}
 
-  ul
-    each val in posts.length ? posts : [{title: "No posts.", post: "Sorry, there are no active posts :("}]
-      li= val.title
-      li= val.post
-
-  a(href="new") Make a post
+  #login-container
+    form( method="post")#login-form.well.span4
+      h1 Hello!
+      p.subheading Please Login To Your Account
+      label Username
+      input(type="text", name="user", id='user-tf').span4.required
+      label Password
+      input(type="password", name="pass", id='pass-tf').span4.required
+      button(type="submit")#btn-login.btn.btn-primary
+        i.icon-lock.icon-white
+        | Sign in
+      label#remember-me.checkbox Remember Me
+        input(type="checkbox", checked='checked')
+      div.clear-fix
+      hr
+      div.btm-links
+        a(href='#')#forgot-password Forgot Your Password?
+        a(href='/signup')#create-account Create An Account
