--- a/views/posts.jade
+++ b/views/posts.jade
@@ -15,24 +15,31 @@ block content
 
 
   ul
-    each val in posts.length ? posts : [{title: "No posts.", post: "Sorry, there are no active posts :("}]
-      if val.user != cookies.user
+    each val in posts.length ? posts : [{title: "No posts.", post: "Sorry, there are no active posts :(", user: "a"}]
+      if val.user != user
         #ptitle
           p= val.title
         #ppost
           p= val.post
-        div= "posted by " + val.user
+        if(val.user.length > 3)
+          div= "posted by " + val.user
 
 
       else
         #pname
           p= "You can still edit your post!"
         #inner-post-form
-          form(name="post", action="/post", method="post")
+          form(name="post", action="/edit", method="post")
             #title-input
               input(type="text", name="title", value=val.title)
             #post-input
               textarea(type="text", name="post", rows = 20, cols = 80)= val.post
-            input(type="submit", value="Submit")
-        div
-          button Delete
+            input(type="hidden", name="orig_title", value=val.title)
+            input(type="hidden", name="orig_post", value=val.post)
+            input(name="submit",type="submit", value="Submit")
+          form(name="post", action="/delete", method="post")
+            input(type="hidden", name="title", value=val.title)
+            input(type="hidden", name="post", value=val.post)
+            input(name="delete",type="submit", value="Delete")
+  #signout
+    a(href="signout") logout
