--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,42 +1,57 @@
 body
   padding: 50px
+  background-image: url('background.jpg')
   background-color: #EEEEEE
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 a
   color: #00B7FF
+  margin-left auto
+  margin-right auto
 
 h1
+  color #DDDDDD
   text-align center
   margin-top 160px
+  margin-bottom 5px
+
+
 
 h3
+  color #DDDDDD
   text-align center
   margin-top 160px
 
 #login-container
-	width 170px
-	margin 30px auto
-	label
-    text-align left
-		margin 15px 0 5px 5px
-
+  color #DDDDDD
+  width 170px
+  margin-left auto
+  margin-right auto
+  input
+    background-color #DDDDDD
+  h4
+    margin-left 0px
+    text-align center
   h5
     text-align center
+    color red
 
 	button
-		width 177px
-		padding 6px 40px 6px 40px
+		width 175px
+		padding 6px 70px 6px 70px
 		margin-top 15px
-  #prompt
-  	div
-      margin 10px 0 10px 10px
-  		text-align left
 
-  #create-account
-    a
-      text-align center
+
+
+#create-account
+  margin 5px 1px
+  text-align center
+
+label
+  text-align left
+  margin 20px 5px
 
 #signup-container
+  color #DDDDDD
   width 170px
   margin 30px auto
   label
@@ -53,12 +68,14 @@ h3
 #ptitle
   margin 20px 160px 20px 160px
   p
+    color #002344
     font-size 175%
     font-weight bold
     height 30px
+    background #DDDDDD
     border-style solid
-    border-width 1px
-    border-color #AAAAAA
+    border-width 5px
+    border-color #056F83
     padding-left 5px
     padding-right 5px
     padding-top 5px
@@ -68,9 +85,11 @@ h3
 #ppost
   margin 20px 160px 0 160px
   p
+    background #DDDDDD
+    color #002344
     border-style solid
-    border-width 1px
-    border-color #AAAAAA
+    border-width 5px
+    border-color #056F83
     font-size 125%
     height 200px
     padding-left 5px
@@ -80,12 +99,14 @@ h3
     text-align left
 
 #pedit
+  color white
   margin 20px 160px 20px 160px
   text-align left
 
 #pname
   margin 20px 160px 20px 160px
   text-align right
+  color #AAAAAA
   p
     height 20px
 
@@ -93,6 +114,7 @@ h3
 #title-input
   margin 20px 0 20px 0
   input
+    background-color white
     font-size 175%
     font-weight bold
     height 30px
@@ -105,6 +127,7 @@ h3
 #post-input
   margin 20px 0 20px 0
   textarea
+    background-color white
     padding-left:0;
     padding-top:0;
     padding-bottom:0.4em;
@@ -126,3 +149,13 @@ h3
     font-size 250%
 #signout
   text-align center
+
+#anon
+  position fixed
+  bottom 10px
+  right 10px
+
+#return
+  position fixed
+  bottom 10px
+  left 10px
