--- a/views/signup.jade
+++ b/views/signup.jade
@@ -17,3 +17,6 @@ block content
         input(type="password", name="pass2")
         br
         button Submit
+
+  #return
+    a(href="") Back to Login Page
