finished except for gitithub links

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,7 +13,7 @@ block content
         small Login To Your Account
       label Username
       br
-      input(type="text", name="user")
+      input(type="text", name="user", maxlength="13")
       br
       label Password
       br
