--- a/views/signup.jade
+++ b/views/signup.jade
@@ -6,7 +6,7 @@ block content
     form(name="post", action="/create", method="post")
         label User Name:
         br
-        input(type="text", name="user")
+        input(type="text", name="user", maxlength="13")
         br
         label Password:
         br
