--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -88,13 +88,14 @@ label {
   margin: 20px 160px 0 160px;
 }
 #ppost p {
+  word-wrap: break-word;
   background: #ddd;
   color: #002344;
   border-style: solid;
   border-width: 5px;
   border-color: #056f83;
   font-size: 125%;
-  height: 200px;
+  height: 210px;
   padding-left: 5px;
   padding-right: 5px;
   padding-top: 5px;
@@ -137,8 +138,8 @@ label {
   padding-top: 0;
   padding-bottom: 0.4em;
   padding-right: 0.4em;
-  font-size: 125%;
-  height: 200px;
+  font-size: 150%;
+  height: 195px;
   width: 100%;
 }
 #post-form {
