--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -83,13 +83,14 @@ label
 #ppost
   margin 20px 160px 0 160px
   p
+    word-wrap break-word
     background #DDDDDD
     color #002344
     border-style solid
     border-width 5px
     border-color #056F83
     font-size 125%
-    height 200px
+    height 210px
     padding-left 5px
     padding-right 5px
     padding-top 5px
@@ -130,8 +131,8 @@ label
     padding-top:0;
     padding-bottom:0.4em;
     padding-right: 0.4em;
-    font-size 125%
-    height 200px
+    font-size 150%
+    height 195px
     width 100%
 
 #post-form
