works with new datatyp pe and all that

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -160,8 +160,26 @@ label {
   bottom: 10px;
   right: 10px;
 }
+#search {
+  width: 100px;
+  position: fixed;
+  top: 10px;
+  right: 100px;
+}
+#search p {
+  white-space: nowrap;
+  color: #fff;
+}
 #return {
   position: fixed;
   bottom: 10px;
   left: 10px;
+}
+#follow {
+  text-align: left;
+}
+#unsearch {
+  position: fixed;
+  top: 100px;
+  right: 85px;
 }
