--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -154,7 +154,23 @@ label
   bottom 10px
   right 10px
 
+#search
+  p
+    white-space: nowrap;
+    color white
+  width 100px
+  position fixed
+  top 10px
+  right 100px
+
 #return
   position fixed
   bottom 10px
   left 10px
+#follow
+  text-align left
+
+#unsearch
+  position fixed
+  top 100px
+  right 85px
